
aux_source_directory(. SRC_LIST)
add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${LIBVILLACONNECTOR_VERSION_STRING}
    SOVERSION ${LIBVILLACONNECTOR_VERSION_MAJOR})


target_link_libraries(${PROJECT_NAME} ${SYSTEMD_LIBRARIES})

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
